syntax = "proto3";
option java_multiple_files = true;
//import "google/api/annotations.proto";

import "dependency/v1/dependencyservice.proto";

package org.scardiecat.pongservice.v1;

service PongService {
    rpc SendPing (SendPingMessageRequest) returns (PongMessage) {
//        option (google.api.http) = {
//      post: "/api/v1/echo"
//    };
    }

    rpc SendVersion (org.scardiecat.dependency.v1.SendVersionRequest) returns (org.scardiecat.dependency.v1.SendVersionResponse) {
    }
}

message SendPingMessageRequest {
    string content = 1;
}

message PongMessage {
    string message_id = 1;
    string sender_id = 2;
    string content = 3;
}

